prelim add speakers

--- a/episodes/100-greg-bolen-law-enforcement-education-professional-wrestling-role-models-relationships-advice.mdx
+++ b/episodes/100-greg-bolen-law-enforcement-education-professional-wrestling-role-models-relationships-advice.mdx
@@ -10,6 +10,8 @@ categories:
 - lawenforcement
 - reading
 - running
+speakers:
+- greg-bolen
 ---
 
 In this episode, Ethan interviews Mr. Greg Bolen, Criminal Justice teacher at Carroll County High School and Deputy at Carroll County Sheriff's Office. They discuss his early professional wrestling career, how he navigated adversity through his childhood, his early career in law enforcement and education, and some of the lessons he learned throughout the way. At the end of the episode, he reflects on his career and offers advice to students considering careers in law enforcement or education.
