--- a/episodes/101-dr-carolyn-ward-blue-ridge-parkway-foundation-forestry-appalachia-fundraising-culture-tourism.mdx
+++ b/episodes/101-dr-carolyn-ward-blue-ridge-parkway-foundation-forestry-appalachia-fundraising-culture-tourism.mdx
@@ -8,6 +8,8 @@ categories:
 - mountains
 - nature
 - nonprofit
+speakers:
+- dr-carolyn-ward
 ---
 
 In this episode, Ethan interviews Dr. Carolyn Ward, CEO of the Blue Ridge Parkway Foundation. They discuss the history and founding of the Foundation, her role as its CEO, its role in supporting Parkway infrastructure and operations, and how the Blue Ridge Parkway brings tourism and supports surrounding areas. From there, they discuss Dr. Ward's education, her career in education, and her journey to becoming CEO of the Blue Ridge Parkway Foundation.
