--- a/episodes/14-roger-d-brooks-commonwealth-attorney-engineer-nuclear-lawyer-cooperative-ed-law-school-court-processes.mdx
+++ b/episodes/14-roger-d-brooks-commonwealth-attorney-engineer-nuclear-lawyer-cooperative-ed-law-school-court-processes.mdx
@@ -12,6 +12,8 @@ categories:
 - interivew
 - law
 - reading
+speakers:
+- roger-d-brooks
 ---
 
 In this episode, Ethan and Luke interview Commonwealth Attorney Roger D. Brooks. They ask him about his life growing up, his time at NC State University studying Mechanical Engineering and participating in a Cooperative Education program. He recounts stories about working in the Nuclear industry and explains how nuclear reactors work. They talk about his time migrating from the Engineering industry and starting law school. He explains how he began working in law and eventually took over a practice and then his decision to run as Commonwealth Attorney. He also explains some court procedures and legal situations that some people are not aware of. Anyone interested in law, engineering, and the court system should definitely take a listen!
