--- a/episodes/22-race-recap-froggy-mountain-100-miler-ultramarathon-running-interviews-paul-tilley-rosie-gagnon-zach-coggins-andrew-harvey-adam-small.mdx
+++ b/episodes/22-race-recap-froggy-mountain-100-miler-ultramarathon-running-interviews-paul-tilley-rosie-gagnon-zach-coggins-andrew-harvey-adam-small.mdx
@@ -10,6 +10,8 @@ categories:
 - running
 - ultramarathon
 - veteran
+speakers:
+- paul-tilley
 ---
 
 This episode is a bit different than normal. Instead of their normal long interviews with a single person, Ethan interviewed several different people a few minutes and we Ethan and Luke also did separately recorded segments summarizing their thoughts. This episode follows and focuses on the Froggy Mountain 100 Miler, the hardest race in North America. It consists of 100 miles around a 1 mile loop, each with 500 feet of elevation gain making the total ascent 50,000 feet, aka Mount Everst 1.5 times. They would like to thank everyone for coming out and supporting Paul and his friends and family and the event, it would not have been possible without all the amazing support and help. A huge congratulations and thanks to Paul, Rosie, Zach, Andy, and Adam.
