--- a/episodes/27-us-congressman-morgan-griffith-law-school-politics-family-coal-energy-insurance-advice.mdx
+++ b/episodes/27-us-congressman-morgan-griffith-law-school-politics-family-coal-energy-insurance-advice.mdx
@@ -10,6 +10,8 @@ categories:
 - law
 - politics
 - reading
+speakers:
+- congressman-morgan-griffith
 ---
 
 In this episode, Ethan and Luke interview Congressman Morgan Griffith.
