--- a/episodes/36-clerk-gerald-r-goad-campaign-responsibilities-achievements-goals-digitization-archives-licenses.mdx
+++ b/episodes/36-clerk-gerald-r-goad-campaign-responsibilities-achievements-goals-digitization-archives-licenses.mdx
@@ -7,6 +7,8 @@ categories:
 - interview
 - law
 - politics
+speakers:
+- clerk-gerald-r-goad
 ---
 
 In this episode, Ethan and Luke interview Clerk Gerald R. Goad. This is the second time that he has been on the podcast. Last time, they discussed his personal life and journey to the Clerk's office. This time however, they discuss his achievements thus far, his campaign, his goals for the next term, and a description of some of the procedures that the Clerk's office. 
