--- a/episodes/4-c-jamie-edwards-husband-father-professor-counselor-prevention-specialist-wake-forest-wcc-appalachia-advice.mdx
+++ b/episodes/4-c-jamie-edwards-husband-father-professor-counselor-prevention-specialist-wake-forest-wcc-appalachia-advice.mdx
@@ -10,6 +10,8 @@ categories:
 - wake
 - wcc
 - writing
+speakers:
+- c-jamie-edwards
 ---
 
 In this interview, Jeffrey and Ethan interview C. Jamie Edwards, or Ethan's father. Jamie talks about his time as a Professor, his time at institutions such as Wake Forest and Bluefield, as well as his more recent jobs. Additionally, we briefly discuss interviewing people.
