--- a/episodes/44-santa-clause-early-life-elves-magic-reindeer-gift-production-travel-meaning-of-christmas.mdx
+++ b/episodes/44-santa-clause-early-life-elves-magic-reindeer-gift-production-travel-meaning-of-christmas.mdx
@@ -6,6 +6,8 @@ categories:
 - christmas
 - faith
 - interview
+speakers:
+- santa-clause
 ---
 
 In this episode, Ethan and Luke interview the esteemed Mr. Santa Clause. They discuss his early life, his recruitment of elves and how they used their magic, plus his reindeer. They then cover gift production and travel, including vacation. Finally, they talk about the meaning of Christmas and familiar love.
