--- a/episodes/48-allen-worrell-the-carroll-news-sports-journalism-early-career-stories-lessons-writing-history.mdx
+++ b/episodes/48-allen-worrell-the-carroll-news-sports-journalism-early-career-stories-lessons-writing-history.mdx
@@ -10,6 +10,8 @@ categories:
 - news
 - press
 - reading
+speakers:
+- allen-worrell
 ---
 
 In this episode, Ethan and Luke interview Mr. Allen Worrell. Mr. Worrell works at The Carroll News based in Hillsville, Virginia. He is a graduate of Carroll County High School and Emory and Henry College. He is an experienced journalist whose favorite topic to write about is Sports. Additionally, he has received both the Virginia Press Association News Writing Award and the Virginia Press Association Sports Writing Award, a rare combination. In this episode he discusses his formative years in school, impactful teachers, and his career in journalism. Throughout the episode he recounts stories and discusses history, interviewing techniques, and a myriad of other topics with the hosts. This is an excellent episode.
