--- a/episodes/49-beth-macy-dopesick-roanoke-times-factory-man-writing-journalism-research.mdx
+++ b/episodes/49-beth-macy-dopesick-roanoke-times-factory-man-writing-journalism-research.mdx
@@ -7,6 +7,8 @@ categories:
 - interview
 - journalism
 - writing
+speakers:
+- beth-macy
 ---
 
 In this episode, Ethan and Luke interview Mrs. Beth Macy, a prominent author, writer for the Roanoke Times, and lecturer at Hollins University. During the discussion, they talk about her early life and the challenges she faced, and her decision to go to college. She remarks on the Pell Grants providing her the rare opportunity to go to college debt free and how that changed her life. They then talk about her books and the publishing process. She gives insights into her daily writing routine and goals. They later discuss her favorite stories, interviewing techniques, and more.
