--- a/episodes/52-jerry-carter-oneofuscare-writing-public-speaking-carroll-county-sports-report-community.mdx
+++ b/episodes/52-jerry-carter-oneofuscare-writing-public-speaking-carroll-county-sports-report-community.mdx
@@ -7,6 +7,8 @@ categories:
 - interview
 - speaking
 - sports
+speakers:
+- jerry-carter
 ---
 
 In this episode, Ethan and Luke interview Mr. Jerry Carter, founder of the non-profit OneOfUs.Care. He and his wife have spent the last twenty years promoting wholesome, local activities, including sports. Now, he has moved to Carroll County to continue his mission. He discusses his experience in the news industry; his skills in writing, speaking, and management; and why caring is important. Mr. Carter has donated thousands of hours and dollars in pursuit of what he says costs nothing: encouraging the world, one person at a time.
