--- a/episodes/53-mason-king-football-eh-swim-teaching-civics-history.mdx
+++ b/episodes/53-mason-king-football-eh-swim-teaching-civics-history.mdx
@@ -9,6 +9,8 @@ categories:
 - interview
 - politics
 - reading
+speakers:
+- mason-king
 ---
 
 In this episode, Ethan and Luke interview Mr. Mason King. This was a very special episode for Ethan, as Mr. King serves as a coach for the CCHS Swim Team. During the interview, they discuss his early life and schooling in South Carolina, his family's move to Carroll County, his adjustment to Public Schooling, his football career including his time and Emory and Henry College, and his job as a teacher. Throughout the episode they discuss the impact of COVID, personal anecdotes, and connections with other people. This was a wonderful episode.
