--- a/episodes/56-shawn-montgomery-early-life-education-coaching-history-politics-government.mdx
+++ b/episodes/56-shawn-montgomery-early-life-education-coaching-history-politics-government.mdx
@@ -8,6 +8,8 @@ categories:
 - interview
 - politics
 - running
+speakers:
+- shawn-montgomery
 ---
 
 In this episode, Ethan and Luke interview Mr. Shawn Montgomery, coach, teacher at Carroll County High School. They discuss his childhood growing up in Cana, Virginia, his parent's jobs, and playing sports in school. Touching on the transition from St. Paul to Carroll County High School, Mr. Montgomery recounts how he became involved in Cross Country. From there, he discusses sports and academics. After that, he narrates his time at Gardner–Webb University and his first jobs. Throughout the discussion, the group considers the impacts of sports, education, and jobs on a young person's character. Finally, they recount the beginning of COVID-19 and Mr. Montgomery's introduction to coaching Cross Country and Track. 
