--- a/episodes/6-sheriff-kevin-a-kemp-faith-singing-law-enforcement-work-ethic-election-platform-srosso-k-9-units-advice.mdx
+++ b/episodes/6-sheriff-kevin-a-kemp-faith-singing-law-enforcement-work-ethic-election-platform-srosso-k-9-units-advice.mdx
@@ -10,6 +10,8 @@ categories:
 - official
 - politics
 - sheriff
+speakers:
+- sheriff-kevin-a-kemp
 ---
 
 In this episode, Ethan and Luke interview Sheriff Kevin A. Kemp, the incumbent Sheriff for Carroll County. They talk about early life and how his schooling was instrumental in developing his work ethic, his time traveling and singing Southern Gospel music, working at a prison, and then entering the law enforcement field. They discuss his time as a school resource officer (SRO), his accomplishments during his first term in office, and K-9 units. Later, the drug/vaping/nicotine epidemic is tackled, with discourse about why it is such a tough problem to solve. Additionally, they mention I-77 and highway safety, and how Deputy Sheriffs can work extra hours patrolling the interstate to keep it safe. Sheriff Kemp gives insights as to what motivates him to push his staff and himself every day to keep the county as safe as possible. 
