--- a/episodes/63-brandi-cochran-mitchell-basketball-cchs-hollins-education-coaching-history-athletics.mdx
+++ b/episodes/63-brandi-cochran-mitchell-basketball-cchs-hollins-education-coaching-history-athletics.mdx
@@ -9,6 +9,8 @@ categories:
 - interview
 - reading
 - sports
+speakers:
+- brandi-cochran-mitchell
 ---
 
 In this episode, Ethan and Luke interview Mrs. Brandi Cochran-Mitchell, coach, educator, and parent. During the conversation, they discuss her basketball career at CCHS and Hollins University, her first jobs, her decision to become an educator, becoming a parent, and her Master's degree at Radford and graduate Certificate in United States History at UVA. She discusses her favorite time periods, her career in coaching basketball, and her decision to retire from the Assistant Coach position for the Varsity Girl's Basketball team. This is a wonderful episode.
