--- a/episodes/66-sean-blantonrum-bum-running-training-racing-nutrition-mindset-equipment.mdx
+++ b/episodes/66-sean-blantonrum-bum-running-training-racing-nutrition-mindset-equipment.mdx
@@ -7,6 +7,8 @@ categories:
 - health
 - interview
 - running
+speakers:
+- sean-blanton-run-bum
 ---
 
 In this episode, Ethan and Luke interview Sean Blanton aka Run Bum, ultra-marathoner and owner of Rum Bum Tours. They discuss his introduction to running, how he trains, and some races he has attempted including the Florida Trail Fastest Known Time (FKT). They also discuss his preferred equipment, nutrition, and reveals secrets into the best mindset for running. 
