--- a/episodes/7-clerk-gerald-goad-historical-society-archivist-genealogy-wcc-virginia-tech-advice.mdx
+++ b/episodes/7-clerk-gerald-goad-historical-society-archivist-genealogy-wcc-virginia-tech-advice.mdx
@@ -12,6 +12,8 @@ categories:
 - law
 - vt
 - wcc
+speakers:
+- clerk-gerald-r-goad
 ---
 
 In this episode, Ethan and Luke interview Honorable Clerk Gerald Goad for the first thirty minutes. They briefly discuss his childhood, schooling, time at Wytheville Community College and Virginia Tech. Additionally, they discuss his musical career, scuba diving hobby, and his advice for younger generations in general. After that, for the rest of the episode, Clerk Goad gives us a tour of the facility.  
