--- a/episodes/70-chuck-thompson-education-principal-lung-transplant-story-family-gratitude.mdx
+++ b/episodes/70-chuck-thompson-education-principal-lung-transplant-story-family-gratitude.mdx
@@ -5,6 +5,8 @@ categories:
 - advice
 - education
 - interview
+speakers:
+- chuck-thompson
 ---
 
 In this episode, Ethan and Luke interview Mr. Chuck Thompson, head principal of Carroll County High School. They discuss his early life, time in school, and his college experience. They also talk about some hard losses he had suffered early in life and how he dealt with them. Next, they discuss the day-to-day of being a high school principal and how he and his team of assistant principals are able to accomplish their goals. Mr. Thompson then tells the story of his lung transplant, including how he met his organ donor's family. He talks about gratitude, second chances, and perspective. Finally, they discuss COVID and the future of education. This was an excellent episode.
