--- a/episodes/75-cary-simms-rotary-international-friends-of-the-blue-ridge-community-service-culture-faith.mdx
+++ b/episodes/75-cary-simms-rotary-international-friends-of-the-blue-ridge-community-service-culture-faith.mdx
@@ -6,6 +6,8 @@ categories:
 - faith
 - interview
 - volunteering
+speakers:
+- cary-simms
 ---
 
 In this episode, Ethan interviews Mr. Cary Simms, Rotary District 7570 Youth Exchange Chair and Friends of the Blue Ridge Fisher Peak Chapter Chair. They discuss how to get involved with the two organizations, explain their history and purpose, the projects they are involved with, and the benefits of volunteering for one's community. After, Mr. Simms says a few words about his son's battle with Lyme disease, helping oneself to be able to help others, and his faith.
