--- a/episodes/80-dr-darlene-vaughn-appalachia-history-culture-substance-use-treatment-addiction-development.mdx
+++ b/episodes/80-dr-darlene-vaughn-appalachia-history-culture-substance-use-treatment-addiction-development.mdx
@@ -7,6 +7,8 @@ categories:
 - faith
 - history
 - interview
+speakers:
+- dr-darlene-vaughn
 ---
 
 In this episode, Dr. Darlene Vaughn depicts the growing substance use and abuse problem within Appalachia. She describes treatment options, local movements to support users, the impact of use on development, and how different drugs interact to harm life. She explains the history and culture behind substance use in Appalachia and they translate to today's society.
