--- a/episodes/83-amelia-stansell-modern-slavery-human-trafficking-awareness-ragas-rotary.mdx
+++ b/episodes/83-amelia-stansell-modern-slavery-human-trafficking-awareness-ragas-rotary.mdx
@@ -5,6 +5,8 @@ categories:
 - advice
 - interview
 - rotary
+speakers:
+- amelia-stansell
 ---
 
 In this episode, Ethan interviews Rotary District Governor Mrs. Amelia Stansell to discuss Modern Slavery, Human Trafficking, and how to raise awareness. They also discuss what resources are available for reporters and victims, Mrs. Stansell's involvement with the Rotary Action Group Against Slavery, and more. Finally, they cover the symbolism behind the Blue Ribbon, Human Trafficking Awareness Month, and Rotary.
