--- a/episodes/88-oneofuscare-banquet-education-panel-mrs-dalton-dr-burnette-dr-mcbride-mr-carter.mdx
+++ b/episodes/88-oneofuscare-banquet-education-panel-mrs-dalton-dr-burnette-dr-mcbride-mr-carter.mdx
@@ -9,6 +9,11 @@ categories:
 - interview
 - law
 - reading
+speakers:
+- dr-mark-burnette
+- dr-oliver-mcbride
+- jerry-carter
+- shannon-dalton
 ---
 
 In this episode, Ethan is invited by Mr. Jerry Carter to host an educational panel interviewing Dr. Mark Burnette, Dr. Oliver McBride, Mrs. Shannon Dalton and Mr. Carter himself. During the conversation, each guest gives a brief overview of their educational career and history, their mentors, some programs they have worked with like sports, CTE, JROTC, and Band, as well as their perspective on the COVID-19 pandemic's impact on education. Additionally, Mr. Carter takes a moment to explain his mission, the Cavalier Kudos program, and what the A.S.P.N. stands for. As they wrap up, they discuss their "why" for staying in education.
