--- a/episodes/96-marion-harris-sports-education-coaching-faith-family-refereeing-star-wars.mdx
+++ b/episodes/96-marion-harris-sports-education-coaching-faith-family-refereeing-star-wars.mdx
@@ -8,6 +8,8 @@ categories:
 - family
 - interview
 - sports
+speakers:
+- marion-harris
 ---
 
 In this episode, Ethan and Luke interview Mr. Marion Harris. During the interview, they discuss his early upbringing, his father's career as a minister, his involvement in youth sports, and his time at Bluefield College. From there, he recounts memories at his first jobs before, during, and after college, working as a Special Education teacher, and coaching various sports. They also discuss how he impacts youth sports through refereeing and training others to become referees. Finally, he discusses his faith, family, and the importance of community when it comes to raising a family and going through life. To wrap it up, the three have some quick banter about the best Star Wars movies and Duke or UNC being better.
