--- a/episodes/98-recovery-pastor-kevin-harrod-recovery-united-addiction-faith-healing-family-peer-support.mdx
+++ b/episodes/98-recovery-pastor-kevin-harrod-recovery-united-addiction-faith-healing-family-peer-support.mdx
@@ -7,6 +7,8 @@ categories:
 - reading
 - recovery
 - substanceuse
+speakers:
+- pastor-kevin-harrod
 ---
 
 In this episode, Ethan interviews Recovery Pastor Kevin Harrod of First United Methodist Church. During the interview, Ethan and Pastor Harrod discuss his story with addiction, his spiritual transformation and journey to and through recovery, and then his introduction to ministering to others suffering from substance use disorder. From there, they discuss the program at Recovery United and how it helps others suffering from addiction to start their path on recovery. Finally, they discuss Pastor Harrod's experience and perspective on ministering to others.
