--- a/episodes/99-john-reid-republican-candidate-for-lieutenant-governor-politics-campaigning-platform-family.mdx
+++ b/episodes/99-john-reid-republican-candidate-for-lieutenant-governor-politics-campaigning-platform-family.mdx
@@ -10,6 +10,8 @@ categories:
 - interview
 - law
 - politics
+speakers:
+- john-reid
 ---
 
 In this episode, Ethan interviews Republican Candidate for Virginia Lieutenant Governor John Reid. They discuss his interest in politics, briefly touch on his father's political career and his role in it as well as his career in radio, his work with President Ronald Reagan and his work in international politics, and his platform. Then, he directly addresses some of early controversies regarding his campaign and how he and his team have fought to regain their momentum coming into election season. Finally, he explains his platform, including defending right-to-work and a childcare tax credit for providers, discusses his proposed debate plan with Senator Hashmi, and answers a few wholesome rapid-fire questions.
