--- a/episodes/15-john-bennardo-wheel-of-fortune-hollywood-afv-author-film-director-2-bill-just-a-typo-film-school.mdx
+++ b/episodes/15-john-bennardo-wheel-of-fortune-hollywood-afv-author-film-director-2-bill-just-a-typo-film-school.mdx
@@ -10,6 +10,8 @@ categories:
 - interview
 - reading
 - virtual
+speakers:
+- john-bennardo
 ---
 
 In this episode, Ethan and Luke interview John Bennardo. They discuss his time at film school, his job at America's Funniest Home Videos, and other experiences working Hollywood. They discuss winning Wheel of Fortune, his time teaching and showing his students the video of him winning. They also talk about the process of self-publishing books, creating films, writing screenplays, and more. They also discuss his new book "Just a Typo" and his $2 Bill book and documentary.
