--- a/episodes/19-democratic-delegate-candidate-patty-quesenberry-broadband-housing-social-services-affirmative-action-unions-substance-abuse.mdx
+++ b/episodes/19-democratic-delegate-candidate-patty-quesenberry-broadband-housing-social-services-affirmative-action-unions-substance-abuse.mdx
@@ -8,6 +8,8 @@ categories:
 - interview
 - law
 - politics
+speakers:
+- patty-quesenberry
 ---
 
 In this episode, Ethan and Luke interview Mrs. Patty Quesenberry, the Democratic State Delegate Candidate for Virginia House District 47. They discuss infrastructure, affirmative action, education, housing, social services, volunteering, and other topics. They cover the Democratic platform and what challenges are presented while running as a Democrat in a primarily Republican area. They also discuss the importance of voting and some shocking statistics about how little people vote nowadays.
