--- a/episodes/24-mike-scott-us-navy-submarines-nuclear-service-director-of-veteran-services-veteran-affairs-recruiters-reserves.mdx
+++ b/episodes/24-mike-scott-us-navy-submarines-nuclear-service-director-of-veteran-services-veteran-affairs-recruiters-reserves.mdx
@@ -8,6 +8,8 @@ categories:
 - military
 - movies
 - navy
+speakers:
+- mike-scott
 ---
 
 In this episode, Ethan and Luke interview Mr. Mike Scott. Mr. Scott is a twenty year Navy veteran who served on submarines, was a recruiter, and was in the reserves for a one year stint. After retiring he started working for the Surry County Veterans Services and provides services to Veterans not only in Surry County, but in surrounding counties. They also discuss the Nuclear Service, the Navy SEALs, and the Naval Academy.
