--- a/episodes/31-bp-phil-hawks-clerk-of-circuit-court-candidate-education-ministry-history-america-public-speaking-republican-party-family.mdx
+++ b/episodes/31-bp-phil-hawks-clerk-of-circuit-court-candidate-education-ministry-history-america-public-speaking-republican-party-family.mdx
@@ -10,6 +10,8 @@ categories:
 - law
 - politics
 - reading
+speakers:
+- b-p-phil-hawks
 ---
 
 In this episode Ethan and Luke interview B.P. Phil Hawks. Mr. Hawks is a candidate for the Clerk of Circuit Court in Carroll County, VA. He recounts his early life, his education, role models, career transition to becoming an OT and other important topics. He also briefly discusses his motivation for running for political office.
