--- a/episodes/50-josh-deel-pbs-appalachia-hometowns-film-making-baseball-documentaries-entrepreneur.mdx
+++ b/episodes/50-josh-deel-pbs-appalachia-hometowns-film-making-baseball-documentaries-entrepreneur.mdx
@@ -8,6 +8,8 @@ categories:
 - interview
 - journalism
 - reading
+speakers:
+- josh-deel
 ---
 
 In this episode, Ethan and Luke interview the Senior Producer of PBS Appalachia and creator of the Hometowns series, Mr. Josh Deel. They discuss his early life, career playing professional baseball, his journey through blue collar work, eventually creating his own company, and then his transition to film making. They discuss the challenges of interviewing, finding guests, travel, weather, and more. They then delve into his series, Hometowns, which featured an episode highlighting Carroll County and its history. 
