--- a/episodes/54-ben-tickle-faith-education-family-teaching-coaching-sports.mdx
+++ b/episodes/54-ben-tickle-faith-education-family-teaching-coaching-sports.mdx
@@ -9,6 +9,8 @@ categories:
 - interview
 - reading
 - teaching
+speakers:
+- ben-tickle
 ---
 
 In this episode, Ethan and Luke interview Mr. Ben Tickle, a Christian, a professor at Liberty University, and coach and educator at Carroll County High School. During the interview, they discuss his earliest memories, his educational journey, and his jobs as a teacher, administrator, and coach. Throughout the episode, Mr. Tickle gives insights into his Christian faith, encouraging people to reach out to him to ask questions and learn more. This was a wonderful episode. 
