--- a/episodes/65-donna-ogle-literature-english-writing-college-education-cchs-wcc-communication.mdx
+++ b/episodes/65-donna-ogle-literature-english-writing-college-education-cchs-wcc-communication.mdx
@@ -11,6 +11,8 @@ categories:
 - literature
 - reading
 - wcc
+speakers:
+- donna-ogle
 ---
 
 In this episode, Ethan and Luke interview Mrs. Donna Ogle, educator at CCHS and WCC. They discuss her early childhood, her father's military service, time in Wythe County Public Schools and WCC, her decision to leave school and eventually go back, and her time earning her Master's degree while working full time and being a mom. The guests discuss books, authors, writing, and observations that they have made from both sides of the classroom with her. After, they discuss becoming an effective writer, speaker, and communicator. This was a very special episode for Ethan and Luke. Shortly after this episode was recorded, Luke was fortunate enough to select Mrs. Ogle as her Golden Cavalier's sponsor. 
