--- a/episodes/69-jay-holderfield-education-music-sports-faith-family-history-coaching-community.mdx
+++ b/episodes/69-jay-holderfield-education-music-sports-faith-family-history-coaching-community.mdx
@@ -10,6 +10,8 @@ categories:
 - interview
 - reading
 - school
+speakers:
+- jay-holderfield
 ---
 
 In this episode, Ethan and Luke interview Mr. Jay Holderfield, assistant principal, musician, worship leader and former history teacher. They discuss his upbringing in Carroll County, his time at CCHS, his education at NRCC and Virginia Tech, his Master's Degree where he had the opportunity to support all the Olympic category sports at Virginia Tech and get paid while doing it! He depicts his first jobs in education and his experience coaching basketball. From there, they discuss his Christian faith, touch on his membership to Freemasonry, and begin to talk about life as an administrator. The episode culminates with the importance of family, community, and relationships. This was an excellent episode.
