--- a/episodes/74-cam-coble-amateur-radio-n4nrv-club-getting-licensed-preparedness-antennas-electronics.mdx
+++ b/episodes/74-cam-coble-amateur-radio-n4nrv-club-getting-licensed-preparedness-antennas-electronics.mdx
@@ -7,6 +7,8 @@ categories:
 - electronics
 - interview
 - veteran
+speakers:
+- cam-coble
 ---
 
 In this episode, Ethan interviews Mr. Cam Coble, Amateur Radio Operator and President of the N4NRV Amateur Radio Club. They discuss his introduction to the hobby, CB radios, the process of getting his license, and joining his local club. After, Mr. Coble outlines his journey to becoming Club President, his goals and aspirations for the club, and some of the activities he has coordinated. Finally, they discuss the future of the hobby, how to get licensed, and he encourages newly licensed hams to get on the air.
