--- a/episodes/76-jeff-garrison-presbyterianism-history-amateur-radio-travels-education.mdx
+++ b/episodes/76-jeff-garrison-presbyterianism-history-amateur-radio-travels-education.mdx
@@ -8,6 +8,8 @@ categories:
 - history
 - interview
 - reading
+speakers:
+- rev-jeff-garrison
 ---
 
 In this episode, Ethan interviews Reverend Jeff Garrison, minister at Bluemont and Mayberry Presbyterian Churches. They discuss his early life and education, career into ministry, touch on some theology, and then dive into his doctoral dissertation on religious history in the west while touching on the Second Great Awakening. Next, they discuss their involvement in Amateur Radio, some technological advances, books on radio, and more. Finally, they discuss his travels and he gives some final words on his travel philosophy.
