--- a/episodes/84-andrew-k-jennings-business-scholarship-podcast-legal-scholarship-academia-corporate-law-clerking-teaching.mdx
+++ b/episodes/84-andrew-k-jennings-business-scholarship-podcast-legal-scholarship-academia-corporate-law-clerking-teaching.mdx
@@ -8,6 +8,8 @@ categories:
 - interview
 - law
 - reading
+speakers:
+- andrew-k-jennings
 ---
 
 In this episode, Ethan interviews Mr. Andrew K. Jennings, Associate Law Professor at Emory University, host of the Business Scholarship Podcast, and Carroll County native. A graduate of Hampden-Sydney College and Duke University, Mr. Jennings has experience in Corporate Governance, Corporate Crime, Corporate Compliance, and Securities Regulation. Also, he was a Law Clerk under the Honorable Helene White in the U.S. Court of Appeals. As host of the Business Scholarship Podcast, he interviews individuals in business and legal fields. Finally, he is the founder of KFilings, a service that easily allows individuals to sign up for SEC EDGAR alerts. 
