--- a/episodes/91-sam-terry-agriculture-farming-virginia-tech-army-berlin-education-vocational-ed-cte-shopwork-rotary.mdx
+++ b/episodes/91-sam-terry-agriculture-farming-virginia-tech-army-berlin-education-vocational-ed-cte-shopwork-rotary.mdx
@@ -9,6 +9,8 @@ categories:
 - military
 - rotary
 - veteran
+speakers:
+- sam-terry
 ---
 
 In this episode, Ethan and Luke interview Mr. Sam Terry, father, veteran, educator, and Rotarian. They discuss his early life and family history, his time at Virginia Tech in the Corps of Cadets, his service in the Army reserves, and his time in education. After a few years as a teacher, he becomes the Director of Vocational Education for Carroll County Public Schools and a Rotarian. A proud father to two children, he retired after thirty-two years in education to travel the world with his family and work in his shop.
